# kosh

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1
.github/workflows/: release.yml
Formula/: kosh.rb
brand/: website.md
crates/kosh-cli/: Cargo.toml
crates/kosh-cli/src/: client.rs  main.rs  output.rs
crates/kosh-cli/src/commands/: add.rs  delete.rs  edit.rs  init.rs  list.rs  login.rs  logout.rs  mod.rs  rotate.rs  run.rs  server.rs  status.rs  sync.rs  team.rs
crates/kosh-cli/tests/: cli_test.rs  sync_test.rs
crates/kosh-cli/tests/common/: mod.rs
crates/kosh-core/: Cargo.toml
crates/kosh-core/src/: config.rs  crypto.rs  env_file.rs  error.rs  keychain.rs  lib.rs  models.rs  reference.rs  store.rs
crates/kosh-redactor/: Cargo.toml
crates/kosh-redactor/src/: blocked.rs  error.rs  lib.rs  redactor.rs
crates/kosh-server/: Cargo.toml
crates/kosh-server/migrations/: 001_init.sql  002_rls.sql  003_audit.sql
crates/kosh-server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
crates/kosh-server/src/api/: audit.rs  auth.rs  mod.rs  secrets.rs  team.rs  workspaces.rs
crates/kosh-server/src/middleware/: auth.rs  isolation.rs  mod.rs
crates/kosh-server/tests/: auth_test.rs  isolation_test.rs  secrets_test.rs  smoke_test.rs  team_test.rs  workspaces_test.rs
crates/kosh-server/tests/common/: mod.rs
skills/kosh/: SKILL.md
website/: .gitignore  next.config.ts  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/about/: page.tsx
website/app/docs/: layout.tsx
website/app/docs/[[...slug]]/: page.tsx
website/components/: copy-button.tsx  nav.tsx
website/content/docs/: add.mdx  delete.mdx  edit.mdx  index.mdx  init.mdx  installation.mdx  list.mdx  login.mdx  meta.json  rotate.mdx  run.mdx  status.mdx  sync.mdx  team.mdx
website/public/: install.ps1  install.sh
