[workspace]
members = [
    "crates/kosh-core",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Your Name <you@email.com>"]
license      = "BSL-1.1"
repository   = "https://github.com/yourusername/kosh"
rust-version = "1.75"

[workspace.dependencies]
# Error handling
anyhow       = "1"
thiserror    = "1"
# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
# Crypto
age          = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
argon2       = "0.5"
blake3       = "1"
hkdf         = "0.12"
sha2         = "0.10"
rand         = { version = "0.8", features = ["getrandom"] }
zeroize      = { version = "1", features = ["derive"] }
# Keychain
keyring      = "2"
# .env parsing
dotenvy      = "0.15"
# UUID
uuid         = { version = "1", features = ["v4", "serde"] }
# Hex (used by reference.rs)
hex          = "0.4"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
