[workspace]
members = [
    "crates/kosh-core",
    "crates/kosh-redactor",
    "crates/kosh-cli",
    "crates/kosh-server",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Your Name <you@email.com>"]
license      = "BSL-1.1"
repository   = "https://github.com/yourusername/kosh"
rust-version = "1.75"

[workspace.dependencies]
# Async
tokio        = { version = "1", features = ["full"] }
# Error handling
anyhow       = "1"
thiserror    = "1"
# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
# Crypto
age          = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
argon2       = "0.5"
blake3       = "1"
hkdf         = "0.12"
sha2         = "0.10"
rand         = { version = "0.8", features = ["getrandom"] }
zeroize      = { version = "1", features = ["derive"] }
# Keychain
keyring      = "2"
# .env parsing
dotenvy      = "0.15"
# UUID
uuid         = { version = "1", features = ["v4", "serde"] }
# Hex (used by reference.rs)
hex          = "0.4"
# Redactor
aho-corasick = "1"
# CLI
clap         = { version = "4", features = ["derive"] }
rpassword    = "7"
# Server (HTTP, DB, auth)
axum         = "0.8"
tower        = "0.5"
tower-http   = { version = "0.6", features = ["trace"] }
sqlx         = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
jsonwebtoken = "9"
chrono       = { version = "0.4", features = ["serde"] }
base64       = "0.22"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Dev / test
tempfile     = "3"
assert_cmd   = "2"
predicates   = "3"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
