[package]
name = "kosh-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kosh"
path = "src/main.rs"

[dependencies]
kosh-core = { path = "../kosh-core" }
kosh-redactor = { path = "../kosh-redactor" }
age = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rpassword = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
kosh-server = { path = "../kosh-server" }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
