[package]
name    = "kosh-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace       = true
thiserror.workspace    = true
serde.workspace        = true
serde_json.workspace   = true
toml.workspace         = true
age.workspace          = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
argon2.workspace       = true
blake3.workspace       = true
hkdf.workspace         = true
sha2.workspace         = true
rand.workspace         = true
zeroize.workspace      = true
keyring.workspace      = true
uuid.workspace         = true
hex.workspace          = true

[dev-dependencies]
tempfile = "3"
